<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/m_select_image_popup_camera"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/string_select_image_popup_camera"
                android:textColor="#999999"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#e9e9e9" />

            <TextView
                android:id="@+id/m_select_image_popup_picture"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/string_select_image_popup_picture"
                android:textColor="#999999"
                android:textSize="14dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/m_select_image_popup_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/string_select_image_popup_cancel"
            android:textColor="#999999"
            android:textSize="14dp" />

    </LinearLayout>
</RelativeLayout>