<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/img_loginbackground2x"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/m_forget_password_back_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:scaleType="center"
        android:src="@mipmap/nav_icon_back"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/m_forget_password_top_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
         />

    <EditText
        android:id="@+id/m_forget_password_account_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_forget_password_top_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input_bg"
        android:drawableLeft="@mipmap/login_icon_phone"
        android:drawablePadding="10dp"
        android:hint="@string/string_forget_password_account_alert"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/m_forget_password_verify_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_forget_password_account_view"
        android:layout_alignStart="@id/m_forget_password_account_view"
        android:layout_alignLeft="@id/m_forget_password_account_view"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input_bg"
        android:drawableLeft="@mipmap/login_icon_verification"
        android:drawablePadding="10dp"
        android:hint="@string/string_forget_password_verify_alert"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="12dp" />

    <com.ciyuanplus.mobile.widget.NoEmojiEditText
        android:id="@+id/m_forget_password_password_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_forget_password_verify_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input_bg"
        android:drawableLeft="@mipmap/login_icon_password"
        android:drawablePadding="10dp"
        android:hint="@string/string_forget_password_password_alert"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/m_forget_password_send_verify_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignTop="@id/m_forget_password_verify_view"
        android:layout_alignRight="@id/m_forget_password_verify_view"
        android:layout_alignBottom="@id/m_forget_password_verify_view"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/string_forget_password_send_verify_alert"
        android:textColor="#999999"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/m_forget_password_confirm_text"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_forget_password_password_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:text="@string/string_forget_password_confirm_alert"
        android:textColor="#000000"
        android:textSize="15dp" />
</RelativeLayout>