<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/m_search_community_top_lp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/m_search_community_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/string_search_community_cancel_alert"
            android:textColor="#373737"
            android:textSize="14dp" />

        <com.ciyuanplus.mobile.widget.ClearEditText
            android:id="@+id/m_search_community_search_edit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/m_search_community_cancel"
            android:background="@drawable/search_view_bg"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:hint="@string/string_main_search_alert"
            android:imeOptions="actionSearch"
            android:paddingLeft="35dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="#333333"
            android:textColorHint="#999999"

            android:textSize="13dp" />

        <!--android:textCursorDrawable="@drawable/editcolor"-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/m_search_community_search_edit"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/nav_icon_search_small" />
    </RelativeLayout>

    <com.ciyuanplus.mobile.pulltorefresh.XListView
        android:id="@+id/m_search_community_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_search_community_top_lp"
        android:divider="#c5c5c5"
        android:dividerHeight="0px"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/m_search_community_null_lp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/m_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/null_data_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_search_community_null_zone_alert1"
            android:textColor="#333333"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/string_search_community_null_zone_alert2"
            android:textColor="#333333"
            android:textSize="14dp" />

    </LinearLayout>
</RelativeLayout>