<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f5f5f5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/m_change_stuff_state_selling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_onsale" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_change_stuff_state_selling"
                    android:textColor="#333333"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_change_stuff_state_ordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_reserved" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_change_stuff_state_ordered"
                    android:textColor="#333333"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_change_stuff_state_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_soldout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_change_stuff_state_selled"
                    android:textColor="#333333"
                    android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/m_change_stuff_state_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1px"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/string_select_image_popup_cancel"
            android:textColor="#333333"
            android:textSize="14dp" />
    </LinearLayout>
</RelativeLayout>