<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f5f5f5"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/m_select_edit_delete_stuff_mine_lp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/m_select_edit_delete_stuff_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_editnews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_select_edit_delete_news_edit"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_select_edit_delete_stuff_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_changestate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_select_edit_delete_stuff_change"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_select_edit_delete_stuff_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_deletenews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_select_edit_delete_news_delete"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/m_select_edit_delete_stuff_others_lp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/m_select_edit_delete_stuff_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/m_select_edit_delete_stuff_collect_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_un_collectnews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_select_edit_delete_news_collect"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_select_edit_delete_stuff_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/btn_reportnews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/string_select_edit_delete_news_report"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/m_select_edit_delete_stuff_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1px"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/string_select_image_popup_cancel"
            android:textColor="#333333"
            android:textSize="14dp" />
    </LinearLayout>
</RelativeLayout>